Use WorkingDir and specify LogDir for bwtestserver unit file

--- a/systemd/scion-bwtestserver.service
+++ b/systemd/scion-bwtestserver.service
@@ -9,7 +9,8 @@ PartOf=scionlab.target
 Type=simple
 User=scion
 Group=scion
-ExecStart=/usr/bin/scion-bwtestserver -p 30100
+WorkingDirectory=/etc/scion
+ExecStart=/usr/bin/scion-bwtestserver -p 30100 -log_dir /var/log/scion
 RemainAfterExit=False
 KillMode=control-group
 Restart=on-failure
