--- a/systemd/scion-bwtestserver.service
+++ b/systemd/scion-bwtestserver.service
@@ -14,6 +14,7 @@ ExecStart=/usr/bin/scion-bwtestserver -p 30100 -log_dir /var/log/scion
 RemainAfterExit=False
 KillMode=control-group
 Restart=on-failure
+RestartSec=10
 
 [Install]
 WantedBy=scionlab.target
