--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,13 +25,33 @@ clone-repositories:
     expire_in: 1 hour
   script:
     # Clone SCION apps source code
-    - git clone --depth=1 $CI_SCIONAPPS_REPO -b $CI_SCIONAPPS_BRANCH scion-apps
+    - git clone --depth=1 https://github.com/netsec-ethz/scion-apps.git -b master scion-apps
     # Place hashes of git repos in the output for auditing
     - git -C scion-apps/ log -1
     # Override some files from upstream SCION apps
     - pushd scion-apps
     - if [ ! -z "$(ls ../patches)" ]; then ls -l ../patches; for i in ../patches/*.patch; do git apply $i --verbose; done; fi
     - popd
+
+prefetch-dependencies:
+  stage: pre-build
+  image: busybox
+  retry:
+    max: 2
+    when: runner_system_failure
+  artifacts:
+    paths:
+      - bazel_install_script.sh
+      - go.linux-amd64.tar.gz
+    expire_in: 1 hour
+  script:
+    # Prefetch selected version of bazel installer:
+    - BAZEL_VERSION=0.25.3
+    - wget https://github.com/bazelbuild/bazel/releases/download/$BAZEL_VERSION/bazel-$BAZEL_VERSION-installer-linux-x86_64.sh -O bazel_install_script.sh
+    # Prefetch selected go version:
+    - GOLANG_VERSION=1.13.4
+    - wget https://dl.google.com/go/go$GOLANG_VERSION.linux-amd64.tar.gz -O go.linux-amd64.tar.gz
+
 
 .build-script: &build-script
   before_script:
@@ -47,11 +67,11 @@ clone-repositories:
       libc6-arm64-cross libc6-dev-arm64-cross gcc-aarch64-linux-gnu gcc-7-aarch64-linux-gnu
       libc6-i386-cross libc6-dev-i386-cross linux-libc-dev-i386-cross
     # Install golang
-    - curl -fSL "https://dl.google.com/go/go$CI_GOLANG_VERSION.linux-amd64.tar.gz" | tar xzC /usr/local
+    - tar -f go.linux-amd64.tar.gz -xzC /usr/local
     - ln -f -s /usr/local/go/bin/* /usr/bin/
     # Install selected release of BAZEL
-    - wget https://github.com/bazelbuild/bazel/releases/download/$CI_BAZEL_VERSION/bazel-$CI_BAZEL_VERSION-installer-linux-x86_64.sh -O bazel_install_script.sh
     - bash bazel_install_script.sh
+
     # Prepare GO environment
     - export CGO_ENABLED=1
     - export GOOS=linux
@@ -491,6 +511,7 @@ all-debian-10-amd64-test:
     max: 2
     when: runner_system_failure
   before_script:
+    - printenv
     - 'which ssh-agent || ( apt update && apt-get install -qq openssh-client )'
     - eval $(ssh-agent -s)
     - ssh-add <(echo "$CI_SSH_PRIVATE_KEY")
